; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_gui_mac.c_HandleUnusedParms.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_gui_mac.c_HandleUnusedParms.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@keyMissedKeywordAttr = common dso_local global i32 0, align 4
@typeKeyword = common dso_local global i32 0, align 4
@errAEDescNotFound = common dso_local global i64 0, align 8
@noErr = common dso_local global i64 0, align 8
@errAEEventNotHandled = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @HandleUnusedParms(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %7 = load i32*, i32** %2, align 8
  %8 = load i32, i32* @keyMissedKeywordAttr, align 4
  %9 = load i32, i32* @typeKeyword, align 4
  %10 = ptrtoint i32* %6 to i32
  %11 = call i64 @AEGetAttributePtr(i32* %7, i32 %8, i32 %9, i32* %5, i32 %10, i32 4, i64* %4)
  store i64 %11, i64* %3, align 8
  %12 = load i64, i64* %3, align 8
  %13 = load i64, i64* @errAEDescNotFound, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %17

15:                                               ; preds = %1
  %16 = load i64, i64* @noErr, align 8
  store i64 %16, i64* %3, align 8
  br label %18

17:                                               ; preds = %1
  br label %18

18:                                               ; preds = %17, %15
  %19 = load i64, i64* %3, align 8
  ret i64 %19
}

declare dso_local i64 @AEGetAttributePtr(i32*, i32, i32, i32*, i32, i32, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
